--- a/constellation.ipynb
+++ b/constellation.ipynb
@@ -1057,6 +1057,7 @@
     "fig = plt.figure() \n",
     "fig.add_subplot()\n",
     "plt.scatter(x,y)\n",
+    "plt.title('2D plot of Orion constellation')\n",
     "plt.show()"
    ]
   },
@@ -1101,10 +1102,10 @@
     "fig_3d.add_subplot(1,1,1,projection='3d')\n",
     "constellation3d = ax.scatter(x, y, z, color = ‘black’, marker = ‘*’, alpha=0.7)\n",
     "plt.show()\n",
-    "ax.set_xlabel(‘Position of “X’s”’)\n",
-    "ax.set_ylabel(‘Position of “Y’s”’)\n",
-    "ax.set_zlabel(‘Position of “Z’s”’)\n",
-    "ax.set_title(‘The Position of the Orion Constellation in 3D’)"
+    "ax.set_xlabel('Position of “X’s”')\n",
+    "ax.set_ylabel('Position of “Y’s”')\n",
+    "ax.set_zlabel('Position of “Z’s”')\n",
+    "ax.set_title('The Position of the Orion Constellation in 3D’)"
    ]
   },
   {
